test_case/rust-lang_rust/14517_44551033.rs
 rust
// src/test/compile-fail/foo.rs
pub extern
  "invalid-abi" //~ ERROR: ...
fn foo() {}

fn main() {}
